Fix login page formatting on mobile

--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,7 @@
 #user-login {
     text-align: center;
 }
+
+#user-login input {
+	max-width: 100%;
+}
